# cucm-py

./: .gitignore  README.md  example.py  example_async.py  pyproject.toml  research.py  test_gen.py
.github/workflows/: python-package.yml
ciscoaxl/: axl.py  pydantic_generate.py  pydantic_models.py  wsdl.py
cucm/: configs.py  connection.py  debug.py  utils.py
cucm/axl/: AXL.py  __init__.py  asyncaxl.py  axl.py  configs.py  credentials.py  exceptions.py  helpers.py  items.py  utils.py  validation.py  wsdl.py
cucm/cupi/: cupi.py  exceptions.py
cucmtoolkit/: __init__.py
cucmtoolkit/ciscoaxl/: __init__.py  axl.py  configs.py  credentials.py  exceptions.py  validation.py  wsdl.py
tests/: conftest.py  env.template.py  test_async_axl.py  test_axl.py  test_connection.py
