[tool.poetry]
name = "cucm-py"
packages = [
    {include = "cucm"}
]
version = "0.3.0"
description = "Python SDK for interacting with CUCM services and devices. Utilizes technologies such as AXL, RisPort, and CiscoIPPhone XML objects."
authors = ["rlad78 <goobysc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
zeep = "^4.1.0"
tldextract = "^3.1.2"
validators = "^0.18.2"
beautifulsoup4 = "^4.10.0"
keyring = "^23.2.1"
stdiomask = "^0.0.6"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
ipykernel = "^6.4.1"
xmlschema = "^1.7.1"

[tool.poetry.scripts]
test_connect = "cucm.debug:axl_connect"
show_tree = "cucm.debug:print_axl_tree"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
