[tool.poetry]
name = "cucm-py"
packages = [
    {include = "cucm"}
]
version = "0.5.1"
description = "Python SDK for interacting with CUCM services and devices. Utilizes technologies such as AXL, RisPort, and CiscoIPPhone XML objects."
authors = ["rlad78 <goobysc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
zeep = {extras = ["async"], version = "^4.1.0"}
tldextract = "^3.1.2"
validators = "^0.18.2"
beautifulsoup4 = "^4.10.0"
keyring = ">= 23.5.0"
stdiomask = "^0.0.6"
termcolor = "^1.1.0"
tqdm = "^4.62.3"
multipledispatch = "^0.6.0"
flake8 = {version = "^4.0.1", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipykernel = "^6.4.1"
xmlschema = "^1.7.1"
pytest = "^6.2.5"
notebook = "^6.4.8"
pytest-asyncio = "^0.18.3"

[tool.poetry.scripts]
test_connect = "cucm.debug:axl_connect"
show_tree = "cucm.debug:print_axl_tree"
show_soap_tree = "cucm.debug:print_soap_tree"
clear_url = "cucm.debug:clear_url_and_port"
clear_pass = "cucm.axl.credentials:delete_credentials"

[tool.poetry.extras]
github = ["flake8"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
